--- a/PixelKnot/src/main/res/layout/content_receive.xml
+++ b/PixelKnot/src/main/res/layout/content_receive.xml
@@ -47,7 +47,7 @@
         android:orientation="vertical"
         android:padding="24dp">
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
@@ -78,7 +78,7 @@
                 android:background="@drawable/edittext_error_background"
                 android:visibility="invisible"
                 android:layout_gravity="start" />
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btnUnlock"
