--- a/PixelKnot/src/main/res/layout/content_albums.xml
+++ b/PixelKnot/src/main/res/layout/content_albums.xml
@@ -41,7 +41,7 @@
                 android:text="@string/gallery_info_ok"
                 android:textColor="@color/colorAccent" />
         </LinearLayout>
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_albums"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
