--- a/PixelKnot/src/main/res/layout/share_chooser.xml
+++ b/PixelKnot/src/main/res/layout/share_chooser.xml
@@ -16,7 +16,7 @@
         android:id="@+id/textView2"
         android:layout_marginBottom="10dp"
         />
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_apps"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
