Added copy and share feature to decrypted messages

--- a/PixelKnot/src/main/res/layout/content_receive.xml
+++ b/PixelKnot/src/main/res/layout/content_receive.xml
@@ -35,7 +35,8 @@
         android:padding="24dp"
         android:textColor="@color/colorSecretMessage"
         android:textSize="30sp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:textIsSelectable="true"/>
 
     <LinearLayout
         android:id="@+id/layout_password"
